// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle renders correctly with nothing 1`] = `
.c1 {
  font-family: 'Roboto',-apple-system,'.SFNSText-Regular','San Francisco','Segoe UI','Helvetica Neue','Lucida Grande',sans-serif;
  font-size: 40px;
  font-weight: 700;
  color: #FFFFFF;
  line-height: 44px;
  margin: 0;
}

.c0 {
  text-shadow: 1px 1px #000;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    A title
  </div>
</div>
`;

exports[`PageTitle renders correctly with title 1`] = `
.c1 {
  font-family: 'Roboto',-apple-system,'.SFNSText-Regular','San Francisco','Segoe UI','Helvetica Neue','Lucida Grande',sans-serif;
  font-size: 40px;
  font-weight: 700;
  color: #FFFFFF;
  line-height: 44px;
  margin: 0;
}

.c0 {
  text-shadow: 1px 1px #000;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Work Elsewhere
  </div>
</div>
`;
